--- a/client/create-card.html
+++ b/client/create-card.html
@@ -66,7 +66,12 @@
             <input type="file" class="form-control-file" name="logo" value="">
           </div>
 
-          <button type="submit" class="btn btn-primary" name="button">Submit</button>
+          <div id="row">
+            <div class="mx-auto">
+              <button type="submit" class="btn btn-primary" name="button">Submit</button>
+              <button @click="clear" class="btn btn-danger" name="button">Clear</button>
+            </div>
+          </div>
         </form>
 
       </div>
@@ -74,7 +79,14 @@
       <div class="col-md-6">
         <!-- <business-card :card-data="cardData"></business-card> -->
         <div class="border p-3">
-        <h1 class="text-center">Preview</h1>
+          <h1 class="text-center">Preview</h1>
+
+          <div class="row py-3">
+            <form v-on:submit.prevent="printcard" class="mx-auto">
+              <button class="btn btn-primary"> submit </button>
+            </form>
+          </div>
+          
           <!-- Cards Preview -->
           <!-- Front -->
           <card-front :card-data="cardData"></card-front>
@@ -82,9 +94,6 @@
           <card-back :card-data="cardData"></card-back>
         </div>
 
-        <div class="">
-          <a href="print-card.html" class="btn btn-primary">Submit</a>
-        </div>
       </div>
     </div>
   </div>
