--- a/client/print-card.html
+++ b/client/print-card.html
@@ -33,27 +33,30 @@
       </div>
     </nav>
   </div>
-
   <div id="app">
+   
     <div class="container mt-4">
       <div class="row">
         <div class="col-md-5 border m-1">
-          <h1>Front</h1>
-          <business-card :card-data="cardData"></business-card>
+          <h1>Depan</h1>
+          <card-front :card-data="cardData"></card-front>
         </div>
         <div class="col-md-5 border m-1">
-          <h1>Back</h1>
-          <business-card :card-data="cardData"></business-card>        
+          <h1>Belakang</h1>
+          <card-back :card-data="cardData"></card-back>        
         </div>
       </div>
     </div>
   </div>
+  <!-- <script>var test = localStorage.getItem('data') </script> -->
+  
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="src/js/card-component.js"></script>
+  <script src="src/js/card-front-component.js"></script>
+  <script src="src/js/card-back-component.js"></script>
   <script src="src/js/app-main.js"></script>
 </body>
 </html>
