--- a/client/print-card.html
+++ b/client/print-card.html
@@ -14,7 +14,7 @@
   <div class="row mx-0">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary col-12 px-5">
       <a class="navbar-brand" href="#">Cardify</a>
-      
+
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -29,12 +29,15 @@
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
+          <li class="nav-item">
+            <div id="loginfbbtn" scope="public_profile,email" class="fb-login-button" data-max-rows="1" data-size="small" data-button-type="login_with" data-show-faces="false" autologoutlink="true" data-use-continue-as="false" onlogin="checkLoginState();"></div>
+          </li>
         </ul>
       </div>
     </nav>
   </div>
   <div id="app">
-   
+
     <div class="container mt-4">
       <div class="row">
         <div class="col-md-5 border m-1">
@@ -43,13 +46,13 @@
         </div>
         <div class="col-md-5 border m-1">
           <h1>Belakang</h1>
-          <card-back :card-data="cardData"></card-back>        
+          <card-back :card-data="cardData"></card-back>
         </div>
       </div>
     </div>
   </div>
   <!-- <script>var test = localStorage.getItem('data') </script> -->
-  
+
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -58,5 +61,6 @@
   <script src="src/js/card-front-component.js"></script>
   <script src="src/js/card-back-component.js"></script>
   <script src="src/js/app-main.js"></script>
+  <script src="loginFB.js"></script>
 </body>
 </html>
