--- a/client/print-card.html
+++ b/client/print-card.html
@@ -50,6 +50,11 @@
         </div>
       </div>
     </div>
+    <div class="">
+      <a href="http://www.facebook.com/sharer.php?u=https://www.google.com" target="_blank">
+        <img src="https://i.stack.imgur.com/W5ZN8.png" alt="Facebook" style="max-width: 180px;"/>
+      </a>
+    </div>
   </div>
   <!-- <script>var test = localStorage.getItem('data') </script> -->
 
