--- a/client/print-card.html
+++ b/client/print-card.html
@@ -51,7 +51,7 @@
       </div>
     </div>
     <div class="">
-      <a href="http://www.facebook.com/sharer.php?u=https://www.google.com" target="_blank">
+      <a href="http://www.facebook.com/sharer.php?u=https://`${localStorage.getItem('link')}`" target="_blank">
         <img src="https://i.stack.imgur.com/W5ZN8.png" alt="Facebook" style="max-width: 180px;"/>
       </a>
     </div>
